# vcpkg-qt-app

./: .gitignore  CMakeLists.txt  Helpers.cmake  README.md  main.cpp  vcpkg.json
